--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,5 +5,9 @@
     <div class="mt-3">
       <%= render_links(article[:links]) %>
     </div>
+    <div class="mt-3">
+      <%= render partial: 'comments/list', locals: { comments: article_comments, title: 'Comments' } %>
+    </div>
+    <%= link_to 'Add Comment', new_article_comment_url(article[:id]), class: 'btn btn-primary' %>
   </div>
 </div>
