--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,9 @@
-<div class="card comment" id="comment-<%= comment[:id]%>">
+<div class="card comment mb-2" id="comment-<%= comment[:id]%>">
   <div class="card-body">
-    <h2 class="card-title"><%= comment[:text] %></p>
+    <div class="d-flex justify-content-between align-items-start">
+      <p class="card-text mb-0"><%= comment[:text] %></p>
+      <%= status_badge(comment[:status], 'comment') %>
+    </div>
     <div class="mt-3">
       <%= render_links(comment[:links]) %>
     </div>
