--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,6 +4,15 @@
       <p class="card-text mb-0"><%= comment[:text] %></p>
       <%= status_badge(comment[:status], 'comment') %>
     </div>
+    
+    <%# Show rejection feedback if available %>
+    <% if comment[:rejection_feedback].present? %>
+      <div class="alert alert-warning mt-3">
+        <h6><strong>Rejection Feedback:</strong></h6>
+        <p class="mb-0"><%= comment[:rejection_feedback] %></p>
+      </div>
+    <% end %>
+    
     <div class="mt-3">
       <%= render_links(comment[:links]) %>
     </div>
