--- a/app/views/comments/reject_feedback.html.erb
+++ b/app/views/comments/reject_feedback.html.erb
@@ -1,35 +1,7 @@
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">
-          <h4>Reject Comment</h4>
-        </div>
-        <div class="card-body">
-          <div class="mb-3">
-            <strong>Comment Text:</strong>
-            <div class="border p-3 mt-2 bg-light">
-              <%= @comment.text %>
-            </div>
-          </div>
-          <%= form_with url: comment_reject_path(@comment), method: :post, local: true do |form| %>
-            <div class="mb-3">
-              <label for="rejection_feedback" class="form-label">Rejection Feedback</label>
-              <%= form.text_area :rejection_feedback, 
-                  class: "form-control", 
-                  id: "rejection_feedback", 
-                  rows: 6, 
-                  placeholder: "Please provide detailed feedback on why this comment is being rejected...",
-                  required: true %>
-              <div class="form-text">This feedback will be visible to the comment author and help them understand the rejection.</div>
-            </div>
-            <div class="d-flex justify-content-between">
-              <%= link_to "Cancel", article_path(@comment.article), class: "btn btn-secondary" %>
-              <%= form.submit "Reject Comment", class: "btn btn-danger" %>
-            </div>
-          <% end %>
-        </div>
-      </div>
+      <%= raw @html_content %>
     </div>
   </div>
 </div>
