--- a/app/views/custom_templates/show_section.html.erb
+++ b/app/views/custom_templates/show_section.html.erb
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <%= link_to "Reset to Defaults", send("reset_#{@section_name.downcase}_custom_template_path"), 
+          <%= button_to "Reset to Defaults", send("reset_#{@section_name.downcase}_custom_template_path"), 
               method: :post, 
               class: 'btn btn-warning', 
               data: { confirm: "Are you sure you want to reset all #{@section_name.downcase} customizations?" } %>
