Correcting, left Aggregate problem fixing + JSON check + comment2 and everything

--- a/app/views/article2s/show.html.erb
+++ b/app/views/article2s/show.html.erb
@@ -1,6 +1,6 @@
-<h1>Article Details</h1>
+<h1>Article2 Details</h1>
 
-<div id="article-details">
+<div id="article2-details">
   <%= raw @html_content %>
 
   <p>
