--- a/app/views/articles/reject_feedback.html.erb
+++ b/app/views/articles/reject_feedback.html.erb
@@ -2,6 +2,10 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <%= raw @html_content %>
+
+      <p>
+        <%= render_links(@links) %>
+      </p>
     </div>
   </div>
 </div>
