--- a/app/views/comment2s/show.html.erb
+++ b/app/views/comment2s/show.html.erb
@@ -1,8 +1,7 @@
-<h1>Article Details</h1>
+<h1>Comment2 Details</h1>
 
-<div id="article-details">
+<div id="comment2-details">
   <%= raw @html_content %>
-
   <p>
     <%= render_links(@links) %>
   </p>
