--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= raw @html_content %>
 <p>
-  <%= render_links(@comment.hypermedia_new_links(current_user)) %>
+  <%= render_links(@links) %>
 </p>
