Article2ReadModel Comment2 need status chage corrected

--- a/app/views/article2s/_article2.html.erb
+++ b/app/views/article2s/_article2.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h2 class="card-title">
       <%= article2[:title] %>
-      <%= status_badge(article2[:status], 'article2') %>
+      <%= state_badge(article2[:state], 'article2') %>
     </h2>
     <p class="card-text"><%= article2[:content] %></p>
     
