--- a/app/views/comment2s/_comment2.html.erb
+++ b/app/views/comment2s/_comment2.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="d-flex justify-content-between align-items-start">
       <p class="card-text mb-0"><%= comment2[:text] %></p>
-      <%= status_badge(comment2[:status], 'comment2') %>
+      <%= state_badge(comment2[:state], 'comment2') %>
     </div>
     
     <%# Show rejection feedback if available and user is admin or comment author %>
