--- a/app/views/comment2s/_comment2.html.erb
+++ b/app/views/comment2s/_comment2.html.erb
@@ -6,7 +6,7 @@
     </div>
     
     <%# Show rejection feedback if available and user is admin or comment author %>
-    <% if comment2[:rejection_feedback].present?%>
+    <% if comment2[:rejection_feedback].present? && ['rejected'].include?(comment2[:state])%>
       <div class="alert alert-warning mt-3">
         <h6><strong>Rejection Feedback:</strong></h6>
         <p class="mb-0"><%= comment2[:rejection_feedback] %></p>
