Update model_link method to support event sourcing in ApplicationHelper
- Modified the model_link method to accept an event_sourcing parameter, allowing for conditional class name resolution.
- Updated views to utilize the new event_sourcing functionality for generating links in Article2 and Comment2 forms.

--- a/app/views/article2s/_reject_feedback_form.html.erb
+++ b/app/views/article2s/_reject_feedback_form.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="d-flex justify-content-between">
     <%= link_to "Cancel", article2_path(@article2), class: "btn btn-secondary" %>
-    <% title, button_classes = model_link("Article2", :reject, current_user) %>
+    <% title, button_classes = model_link("Article2", :reject, current_user, true) %>
     <%= form.submit title, class: button_classes %>
   </div>
 <% end %>
