--- a/app/views/article2s/_article2.html.erb
+++ b/app/views/article2s/_article2.html.erb
@@ -25,7 +25,7 @@
       </div>
     <% end %>
     
-    <% title, button_classes = model_link("Comment2", :new, current_user) %>
+    <% title, button_classes = model_link("Comment2", :new, current_user, true) %>
     <%= link_to title, new_article2_comment2_url(article2[:id]), class: button_classes %>
   </div>
 
