--- a/app/views/comment2s/_reject_feedback_form.html.erb
+++ b/app/views/comment2s/_reject_feedback_form.html.erb
@@ -10,7 +10,7 @@
     <div class="form-text">This feedback will be visible to the comment2 author and help them understand the rejection.</div>
   </div>
   <div class="d-flex justify-content-between">
-    <% title, button_classes = model_link("Comment2", :reject, current_user) %>
+    <% title, button_classes = model_link("Comment2", :reject, current_user, true) %>
     <%= form.submit title, class: button_classes %>
   </div>
 <% end %>
